Fix: alignment of iterator and pagination.

--- a/src/5-navigation/iterator/_index.scss
+++ b/src/5-navigation/iterator/_index.scss
@@ -55,7 +55,6 @@ $iterator-margin-bottom: 10px !default;
 ) {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   margin-bottom: $margin-bottom;
 }
 
